# text-mining

./: .gitignore  .pre-commit-config.yaml  .pre-commit-tools.toml  Makefile  README.md  ejemplo_mal_formateado.py  format_code.sh  hello.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pre-commit-main.yml  pre-commit-pr.yml  pytest.yml
Task_1/: Practica_Tema3_ejemplo1.xml  tei_all.dtd
Task_2/: pos_spacy.py  standford_pos_nltk.py  test.py  test_corpus.ipynb  test_corpus.py
Task_2/stanford-postagger-full-2020-11-17/: README.txt
Task_2/stanford-postagger-full-2020-11-17/models/: README-Models.txt  arabic-train.tagger.props  arabic.tagger.props  chinese-distsim.tagger.props  chinese-nodistsim.tagger.props  english-bidirectional-distsim.tagger.props  english-caseless-left3words-distsim.tagger.props  english-left3words-distsim.tagger.props  french-ud.tagger.props  german-ud.tagger.props  spanish-ud.tagger.props
Task_3/: embedding.py  task_3.ipynb  text_preprocessing.py  utils.py  vectorizing.py
Task_4/: cluster_evaluation.py  clustering.py  task_4.ipynb
